добавлено чтение измерений перерасчетов